Setting up the corresponding configurations for development and production

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,22 +1,38 @@
-spring:
-  autoconfigure:
-    exclude: org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
-  datasource:
-    url: jdbc:mysql://localhost:3306/hotel_sena
-    username: root
-    password:
+application:
+  security:
+    jwt:
+      secret:
+        key: ${JWT_SECRET}
 
-  jpa:
-    database-platform: org.hibernate.dialect.MySQLDialect
-    generate-ddl: true
-    show-sql: true
-    hibernate:
-      ddl-auto: update
+spring:
+  data:
+    mongodb:
+      uri: ${DATABASE_URI}
+    
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ${EMAIL_USERNAME}
+    password: ${EMAIL_PWD}
     properties:
-      hibernate:
-        globally_quoted_identifiers: true
-        dialect: org.hibernate.dialect.MySQLDialect
-        format_sql: true
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
 
 server:
   port: 8090
+  servlet:
+    encoding:
+      enabled: true
+      charset: UTF-8
+
+logging:
+  level:
+    org.springframework.security: DEBUG
+
+cors:
+  allowed:
+    methods: PUT, POST, GET, DELETE
+  maxAge: 3600
