--- a/src/main/java/dev/waamir/hotelsenaapi/domain/db/docker-compose.yml
+++ b/src/main/java/dev/waamir/hotelsenaapi/domain/db/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   mongodb:
     image: mongo
     container_name: mongo_db
-    port:
+    ports:
       - 27017:27017
     volumes:
       - mongo:/data
