Adding mongo express to the docker composer services

--- a/src/main/java/dev/waamir/hotelsenaapi/domain/db/docker-compose.yml
+++ b/src/main/java/dev/waamir/hotelsenaapi/domain/db/docker-compose.yml
@@ -9,7 +9,15 @@ services:
     environment:
       - MONGO_INITDB_ROOT_USERNAME=admin
       - MONGO_INITDB_ROOT_PASSWORD=admin
+  mongo-express:
+    image: mongo-express
+    container_name: : mongo_express
+    ports:
+      - 8081:8081
+    environment:
+      - ME_CONFIG_MONGODB_ADMINUSERNAME=admin
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=admin
+      - ME_CONFIG_MONGODB_SERVER=mongodb
 
-
-volumes: 
+volumes:
   mongo: {}
