--- a/src/main/java/dev/waamir/hotelsenaapi/domain/db/docker-compose.yml
+++ b/src/main/java/dev/waamir/hotelsenaapi/domain/db/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - MONGO_INITDB_ROOT_PASSWORD=admin
   mongo-express:
     image: mongo-express
-    container_name: : mongo_express
+    container_name: mongo_express
     ports:
       - 8081:8081
     environment:
